<resources>
    <string name="app_name">Full App2</string>
    <string name="dialapp">DialAPP</string>
    <string name="camera">Camera</string>
    <string name="dial">dial</string>
    <string name="profil">profil</string>
    <string name="namehint">name...</string>
    <string name="rewiev">rewiev</string>

    <string name="enter_your_name">Enter your name...</string>
    <string name="enter_your_family">Enter your family...</string>
    <string name="enter_your_mail">Enter your mail...</string>
    <string name="enter_your_age">Enter your age...</string>
    <string name="name">Name :</string>
    <string name="family">Family:</string>
    <string name="mail">Mail:</string>
    <string name="age">Age:</string>
    <string name="ok">Ok</string>
    <string name="edit">Edit</string>
    <string name="phone_namber">Phone Namber</string>
    <string name="number">Number</string>
    <string name="enter_your_phone_number">Enter your phone number...</string>
    <string name="phone_number">Phone number</string>
    <string name="dial2">Dial</string>
    <string name="alert_dialog">alert_dialog</string>
    <string name="derawer">DERAWER</string>
    <string name="share_p">share_p</string>
    <string name="test">test</string>
    <string name="serch">serch</string>

</resources>
