<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ShareTxtActivity"
    android:orientation="vertical"
    android:background="@drawable/shape_main">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_margin="10dp"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"/>

    </LinearLayout>




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/family"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_margin="10dp"
            />



        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"/>

    </LinearLayout>





    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/mail"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_margin="10dp"
            />



        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"/>


    </LinearLayout>




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/age"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_margin="10dp"
            />



        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"/>

    </LinearLayout>




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:gravity="center"
            android:layout_width="150dp"
            android:layout_height="70dp"
            android:background="@drawable/shapebtn"
            android:text="@string/ok"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_margin="5dp"/>

        <Button
            android:gravity="center"
            android:layout_width="150dp"
            android:layout_height="70dp"
            android:background="@drawable/shapebtn"
            android:text="@string/edit"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_margin="5dp"/>

    </LinearLayout>
















</LinearLayout>