<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DialActivity"
    android:orientation="vertical"
    android:background="@drawable/shape_main">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/phone_number"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_margin="60dp"/>


        <EditText
            android:inputType="number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/enter_your_phone_number"/>





        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center">

            <Button
                android:gravity="center"
                android:layout_width="150dp"
                android:layout_height="70dp"
                android:background="@drawable/shapebtn"
                android:text="@string/dial2"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_margin="30dp"/>

        </LinearLayout>

    </LinearLayout>











</LinearLayout>